--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,22 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="bower_components/pure/pure-min.css"/>
+    <link rel="stylesheet" href="bower_components/pure/grids-responsive-old-ie-min.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 
-<div id="root"></div>
+<div class="banner">
+    <h1 class="banner-head">
+        Simple & Stupid.
+    </h1>
+</div>
+<div id="content" class="l-content">
+    <div id="root" class="l-content main">
+
+    </div>
+</div>
 
 <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
 </body>
