--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,11 @@
     </div>
 </div>
 
+<div class="footer l-box">
+    <p>A <a href="http://www.phodal.com/myproject/">Phodal</a> Project @ 2015
+        <a href="http://www.moqi.mobi">墨颀 CMS</a> All Rights Reserved</p>
+</div>
+
 <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
