add library component

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
         <li><a href="#/about">About</a></li>
         <li><a href="#/product">Product</a></li>
         <li><a href="#/project">关于项目</a></li>
+        <li><a href="#/library">Library</a></li>
     </ul>
 </div>
 <div class="banner">
