Add menu component

--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,7 @@
         <span class="header">墨颀CMS</span>
     </button>
 </div>
-<div id="sidr" style="display:none" class="pure-menu-horizontal">
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#/about">About</a></li>
-        <li><a href="#/product">Product</a></li>
-        <li><a href="#/project">关于项目</a></li>
-        <li><a href="#/library">Library</a></li>
-    </ul>
-</div>
+<div id="sidr" style="display:none" class="pure-menu-horizontal"></div>
 <div class="banner">
     <h1 class="banner-head">
         Simple & Stupid.
