change a link menu to class

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="monav">
     <button id="menu" type="button" class="btn navbar-toggle" >
-        <a id="menu" href="#sidr"> ☰ 菜单</a>
+        <a class="menu" href="#sidr"> ☰ 菜单</a>
         <span class="header">墨颀CMS</span>
     </button>
 </div>
