fix requirejs path issues

--- a/app/index.html
+++ b/app/index.html
@@ -2,19 +2,18 @@
 <html class="no-js" lang="">
 <head>
     <meta charset="utf-8">
-    <title>BackboneReact</title>
+    <title>Backbone React in Practice</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bower_components/pure/pure-min.css"/>
-    <link rel="stylesheet" href="bower_components/pure/grids-responsive-old-ie-min.css">
+    <link rel="stylesheet" href="styles/pure-min.css"/>
+    <link rel="stylesheet" href="styles/grids-responsive-old-ie-min.css">
     <link rel="stylesheet" href="styles/main.css">
-    <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 <div class="monav">
     <button id="menu" type="button" class="btn navbar-toggle" >
-        <a class="menu" href="#sidr"> ☰ 菜单</a>
-        <span class="header">墨颀CMS</span>
+        <a class="menu" href="#sidr"> ☰ Menu</a>
+        <span class="header">Backbone React in Practice</span>
     </button>
 </div>
 <div id="sidr" style="display:none" class="pure-menu-horizontal"></div>
@@ -34,6 +33,6 @@
         <a href="http://www.moqi.mobi">墨颀 CMS</a> All Rights Reserved</p>
 </div>
 
-<script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+<script data-main="scripts/main" src="scripts/vendor/require.js"></script>
 </body>
 </html>
