--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Backbone React in Practice</title>
     <meta name="description" content="">
+    <link rel="shortcut icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/pure-min.css"/>
     <link rel="stylesheet" href="styles/grids-responsive-old-ie-min.css">
