move index.html to root

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Backbone React in Practice</title>
     <meta name="description" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="app/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/pure-min.css"/>
-    <link rel="stylesheet" href="styles/grids-responsive-old-ie-min.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="app/styles/pure-min.css"/>
+    <link rel="stylesheet" href="app/styles/grids-responsive-old-ie-min.css">
+    <link rel="stylesheet" href="app/styles/main.css">
 </head>
 <body>
 <div class="monav">
@@ -31,9 +31,8 @@
 
 <div class="footer l-box">
     <p>A <a href="http://www.phodal.com/myproject/">Phodal</a> Project @ 2015
-        <a href="http://www.moqi.mobi">墨颀 CMS</a> All Rights Reserved</p>
 </div>
 
-<script data-main="scripts/main" src="scripts/vendor/require.js"></script>
+<script data-main="app/scripts/main" src="app/scripts/vendor/require.js"></script>
 </body>
 </html>
