remove footer & use README.md as about description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Backbone React in Practice</title>
-    <meta name="description" content="">
+    <meta name="description" content="Backbone React in Practice">
     <link rel="shortcut icon" href="app/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="app/styles/pure-min.css"/>
@@ -27,10 +27,6 @@
     <div id="main_content" class="l-content main">
 
     </div>
-</div>
-
-<div class="footer l-box">
-    <p>A <a href="http://www.phodal.com/myproject/">Phodal</a> Project @ 2015
 </div>
 
 <script data-main="app/scripts/main" src="app/scripts/vendor/require.js"></script>
